<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->
    <string name="app_name">Sticker.fy</string>
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">Sticker Pack</item>
        <item quantity="other">Sticker Packs</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Information</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Added</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>

    <string name="share_app">Share</string>
    <string name="app_share">Hey, check out this cool WhatsApp stickers at: https://github.com/XRzky/Sticker.fy/releases</string>
    <string name="license_text" translatable="false">The following sets forth attributes notices for third party software that may be contained in portions of the Rylabs Inc. product \n\nCopyright (©) 2020 LINE Corp \n*Stickers* \n\nCopyright (©) 2020 Telegram Inc \n*Stickers* \n\nCopyright (©) 2008 Google Inc \n*Json* \n\nCopyright (©) 2016 Javier Santos \n*AppUpdater* \n\nCopyright (©) 2015 cketti \n*Changelogs* \n\nLicensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. \n\nYou may obtain a copy of the License at \nhttp://www.apache.org/licenses/LICENSE-2.0 \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>

    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <!-- Feedback Activity -->
    <string name="feedback">Feedback</string>
    <string name="feedback_error">This required field!</string>
    <string name="feedback_toast">Has been sent!</string>
    <string name="feedback_hint">Your feedback help us to improve. We will contact you on the email you enter here, if it require any further actions.</string>
    <string name="feedback_name">Name</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_subject">Subject</string>
    <string name="feedback_message">Message</string>
    <string name="feedback_submit">Send</string>

    <!-- About Activity -->
    <string name="about">About</string>
    <string name="application">Application</string>
    <string name="dev">©2020 Rylabs Inc.</string>
    <string name="version">Version</string>
    <string name="share">Share</string>
    <string name="license">Licenses</string>
    <string name="changelog">Changelog</string>
    <string name="update">Update</string>
    <string name="update_desc">Check for updates</string>
    <string name="development">Development</string>
    <string name="github">GitHub</string>
    <string name="github_desc">Fork the project on GitHub</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_desc">Subscribe our Telegram channels</string>
    <string name="made_with_love">Made with ❤️ in Indonesia</string>

    <!-- Developers -->
    <string name="main_dev_name">Rygent</string>
    <string name="main_dev_role">Lead developer</string>

    <!-- Changelog Dialog -->
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More</string>
    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>

    <!-- Updater -->
    <string name="update_available">Updates v%1$s is available!</string>
    <string name="update_no_available">You\'ve got the latest version!</string>
    <string name="update_button">Update</string>
</resources>
