<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".StickerPackInfoActivity">

    <include layout="@layout/app_bar_main" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tray_icon"
            style="@style/InfoButtonStyle"
            android:clickable="false"
            android:text="@string/info_screen_tray_icon"
            android:textColor="#B9B9B9"
            tools:drawableLeft="@drawable/ic_website"
            tools:drawableStart="@drawable/ic_website" />

        <TextView
            android:id="@+id/view_webpage"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/ic_website"
            android:drawableLeft="@drawable/ic_website"
            android:text="@string/view_webpage"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/send_email"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:text="@string/send_email"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/ic_privacy"
            android:drawableLeft="@drawable/ic_privacy"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/license_agreement"
            style="@style/InfoButtonStyle"
            android:drawableStart="@drawable/ic_license"
            android:drawableLeft="@drawable/ic_license"
            android:text="@string/license_agreement"
            android:textColor="@android:color/black"/>

    </LinearLayout>
</LinearLayout>
