<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:strokeColor="?dividerColor"
    app:strokeWidth="1dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/development"
            android:textAppearance="@style/AppTheme.TextAppearance.Subheader.Accent"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp">

            <ImageView
                android:id="@+id/icon_infofg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_dev"
                app:tint="@android:color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="30dp"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dev_name"
                    android:textAppearance="@style/AppTheme.TextAppearance.Subheader"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/app_versiondfg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dev_role"
                    android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/github"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:minHeight="30dp">

            <ImageView
                android:id="@+id/icon_info23sdfg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_github"
                app:tint="@android:color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="30dp"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github"
                    android:textAppearance="@style/AppTheme.TextAppearance.Subheader"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_desc"
                    android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/telegram"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:minHeight="30dp">

            <ImageView
                android:id="@+id/icon_info235dfg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_telegram"
                app:tint="@android:color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="30dp"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram"
                    android:textAppearance="@style/AppTheme.TextAppearance.Subheader"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram_desc"
                    android:textAppearance="@style/AppTheme.TextAppearance.Caption"/>

            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/madeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/made_with_love"
            android:textAppearance="@style/TextViewBody1" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>