<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/app_bar_main" />
    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="@dimen/preview_side_margin"
        android:layout_marginLeft="@dimen/preview_side_margin"
        android:layout_marginEnd="@dimen/preview_side_margin"
        android:layout_marginRight="@dimen/preview_side_margin"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/tray_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tray_image_content_description"
            android:src="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pack_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_from_tray_to_name"
                android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tray_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Pack Name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_from_tray_to_name"
                        android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                        android:layout_marginTop="3dp"
                        app:layout_constraintStart_toEndOf="@+id/tray_image"
                        app:layout_constraintTop_toBottomOf="@+id/pack_name"
                        tools:text="Author" />

                    <TextView
                        android:id="@+id/pack_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_from_tray_to_name"
                        android:layout_marginLeft="@dimen/margin_from_tray_to_name"
                        app:layout_constraintStart_toEndOf="@+id/tray_image"
                        app:layout_constraintTop_toBottomOf="@+id/author"
                        tools:text="Size" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/already_added_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/details_pack_already_added"
                            android:visibility="gone"
                            tools:visibility="visible"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/add_to_whatsapp_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/add_to_whatsapp"
                            app:icon="@drawable/sticker_3rdparty_wa"
                            app:iconGravity="start"
                            app:iconPadding="8dp"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.rylabs.stickerfy.BottomFadingRecyclerView
            android:id="@+id/sticker_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="@dimen/fading_edge_length"
            android:paddingStart="@dimen/preview_side_margin"
            android:paddingLeft="@dimen/preview_side_margin"
            android:paddingEnd="@dimen/preview_side_margin"
            android:paddingRight="@dimen/preview_side_margin"
            android:requiresFadingEdge="vertical" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#000000"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>
</LinearLayout>
